2016-02-13 19:15:39 +0100   - config file fix -- Dominik Hassler
2016-02-23 17:57:33 +0100   make configure more careful with checking the environment before getting perl to build things -- Tobias Oetiker
2016-02-13 18:25:02 +0100  (tag: v0.4.0)  * --checkonly option added * make format for certs and keys configurable * updated to Protocol::ACME 0.11 * fix missing use FindBin -- Tobias Oetiker
2016-02-12 19:47:07 +0100   - a couple of fixes -- Dominik Hassler
2016-01-27 11:18:46 +0100   output the key to a temp file -- Tobias Oetiker
2016-01-26 20:40:59 +0100  (tag: v0.3.4)  fix version string -- Tobias Oetiker
2016-01-26 20:08:59 +0100   make bla work without quotes ... -- Tobias Oetiker
2016-01-26 20:02:21 +0100  (tag: v0.3.3)  add some documentation -- Tobias Oetiker
2016-01-26 16:39:24 +0100  (tag: v0.3.2)  better documentation -- Tobias Oetiker
2016-01-26 16:31:51 +0100   added progress reporting -- Tobias Oetiker
2016-01-25 18:11:03 +0100   maybe adding an explicity Math::BigInt dependency will unbreak Travis ? -- Tobias Oetiker
2016-01-25 17:58:40 +0100  (tag: v0.3.1)  * make 'on demand' rebuild work * add ssl dependency -- Tobias Oetiker
2016-01-25 11:27:46 +0100  (tag: v0.3.0)  fix sample config -- Tobias Oetiker
2016-01-25 11:25:29 +0100   * only renew certificates that are expired OR do not contain all subject alternativ names * make this work with the 0.09 api -- Tobias Oetiker
2016-01-25 08:21:38 +0100  (tag: v0.2.2)  release 0.2.2 -- Tobias Oetiker
2016-01-25 08:19:23 +0100   add JSON::PP as a dependency, just to be sure it gets built (#6) -- Tobias Oetiker
2016-01-20 11:21:06 +0100  (tag: v0.2.1)  re-realease for 0.09 -- Tobias Oetiker
2016-01-19 09:26:56 +0100   added missing quotes -- Tobias Oetiker
2016-01-19 09:25:57 +0100   spelling is important :-) -- Tobias Oetiker
2016-01-19 09:25:09 +0100   not env, PERL -- Tobias Oetiker
2016-01-19 09:24:14 +0100   still trying to get travis to check all perl version -- Tobias Oetiker