@@ -18,11 +18,11 @@ system.
 
 On RedHat you get them with:
 
-    yum install perl-core openssl-devel gcc
+    yum install perl-core openssl-devel gcc unzip
 
 On Ubuntu / Debian with:
 
-    apt-get install perl libssl-dev gcc
+    apt-get install perl libssl-dev gcc unzip
 
 Get a copy of AcmeFetch from https://github.com/oetiker/AcmeFetch/releases
 and unpack it into your scratch directory and cd there.
