@@ -17,6 +17,7 @@ AC_ARG_VAR(PERL,   [Path to local perl binary])
 AC_PATH_PROG(PERL, perl, no)
 AC_PATH_PROG(CURL, curl, no)
 AC_PATH_PROG(WGET, wget, no)
+AC_PATH_PROG(UNZIP, unzip, no)
 AC_PATH_PROG(POD2MAN, pod2man, no)
 
 URL_CAT="neither curl nor wget found"
@@ -26,6 +27,12 @@ else
     if test -x "$CURL"; then
         URL_CAT="$CURL --location --insecure"
     fi
+fi
+
+if test -x $UNZIP; then
+:
+else
+    AC_MSG_ERROR(a copy of unzip is required by the perl module build process)
 fi
 
 AC_SUBST(URL_CAT)
