@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ACMEFETCH 1"
-.TH ACMEFETCH 1 "2016-02-23" "0.4.1" "AcmeFetch"
+.TH ACMEFETCH 1 "2016-03-21" "0.4.1" "AcmeFetch"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
