@@ -28,4 +28,4 @@ clean-local:
 	ls -1 | grep -v Makefile | grep -v bin | grep -v CPAN | xargs rm -rf
 
 distclean-local:
-		ls -1 | grep -v Makefile | xargs rm -rf
+	ls -1 | grep -v Makefile. | xargs rm -rf
